syntax = "proto3";

package com.ben.smartcv.common;

option java_package = "com.ben.smartcv.common.cv";
option java_outer_classname = "CvEventProto";
option java_multiple_files = true;

message CvAppliedEvent {

  string cv_id = 1;

  string user_id = 2;

}

message CvApplicationFailedEvent {

  string cv_id = 1;

  string reason = 2;

}

message CvParsedEvent {

  string cv_id = 1;

}

message CvParsingFailedEvent {

  string cv_id = 1;

  string reason = 2;

}